--- a/Client/src/screens/changepassword/changepass.css
+++ b/Client/src/screens/changepassword/changepass.css
@@ -25,15 +25,15 @@ img{
 }
 .submit{
     border: none;
-    background-color: white;
-    color: black;
+    background-color: #1362ac;
+    color: white;
     font-size: 2em;
     padding: 20px;
     min-width: 10vw;
     border-radius: 10px;
 }
 .submit:hover{
-    background-color: #e8b305;
+    background-color: #3794eb;
     cursor: pointer;
 }
 .container-fixed{
@@ -42,14 +42,14 @@ img{
     padding-right: 6vw;
 }
 .toSignInButton{
-    background-color: white;
-    color: black;
+    background-color: #1362ac;
+    color: white;
     padding: 20px;
     margin: 40px 0;
     border-radius: 10px;
 }
 .toSignInButton:hover{
-    background-color: #e8b305;
+    background-color: #3794eb;
     cursor: pointer;
 }
 .form{padding: 20vh 0;}
