--- a/Client/src/screens/login/login.css
+++ b/Client/src/screens/login/login.css
@@ -1,19 +1,19 @@
 h2{
-    color: #e8b305;
+    color: #1362ac;
     font-size: 4em;
 }
 h3{
     font-size: 5em;
     line-height: .5;
-    color: white;
+    color: black;
 }
 img{
     width: 35vw;
-    
+    height: 30vw;
 
 }
 .grid{
-    padding:  3vh 20vw 20vh 20vw ;
+   
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 1fr;
@@ -26,31 +26,29 @@ img{
 }
 .submit{
     border: none;
-    background-color: white;
-    color: black;
+    background-color: #1362ac;
+    color: #1362ac;
     font-size: 2em;
     padding: 20px;
     min-width: 10vw;
     border-radius: 10px;
 }
 .submit:hover{
-    background-color: #e8b305;
+    background-color: #1362ac;
     cursor: pointer;
 }
 .container-fixed{
-    position: fixed;
-    right: 0;
+   
     padding-right: 6vw;
 }
 .toSignInButton{
-    background-color: white;
+    background-color: #1362ac;
     color: black;
     padding: 20px;
     margin: 40px 0;
     border-radius: 10px;
 }
 .toSignInButton:hover{
-    background-color: #e8b305;
+    background-color: #3794eb;
     cursor: pointer;
 }
-.form{padding: 20vh 0;}
