--- a/Client/src/screens/registration/registration.css
+++ b/Client/src/screens/registration/registration.css
@@ -1,10 +1,11 @@
 h2{
-    color: #e8b305;
+    color:#1362ac;
     font-size: 4em;
 }
 h3{
     font-size: 5em;
     line-height: .5;
+    color: black;
 }
 img{
     width: 40vw;
@@ -12,7 +13,7 @@ img{
 
 }
 .grid{
-    padding:  3vh 20vw 20vh 20vw ;
+ 
         color: white;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -26,7 +27,7 @@ img{
 }
 .submit{
     border: none;
-    background-color: white;
+    background-color: #1362ac;
     color: black;
     font-size: 2em;
     padding: 20px;
@@ -34,22 +35,21 @@ img{
     border-radius: 10px;
 }
 .submit:hover{
-    background-color: #e8b305;
+    background-color: #3794eb;
     cursor: pointer;
 }
 .container-fixed{
-    position: fixed;
-    right: 0;
+ 
     padding-right: 6vw;
 }
 .toSignInButton{
-    background-color: white;
+    background-color: #1362ac;
     color: black;
     padding: 20px;
     margin: 40px 0;
     border-radius: 10px;
 }
 .toSignInButton:hover{
-    background-color: #e8b305;
+    background-color: #3794eb;
     cursor: pointer;
 }
