--- a/Client/src/screens/game-page/game_page.css
+++ b/Client/src/screens/game-page/game_page.css
@@ -97,7 +97,7 @@
     font-size: 1.5em;
     border-radius: 10px;
     padding: 10px;
-    max-width: 100px;
+  width: fit-content;
     text-align: center;
     cursor: pointer;
 }
