fix changepass design

--- a/Client/src/screens/changepassword/changepass.css
+++ b/Client/src/screens/changepassword/changepass.css
@@ -5,20 +5,21 @@ h2{
 h3{
     font-size: 5em;
     line-height: .5;
+    color: black;
 }
 img{
     width: 35vw;
+    height: 30vw;
     
-
 }
 .grid{
-    
+   
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: 1fr;
         grid-column-gap: 0px;
         grid-row-gap: 0px;
-
+        color: white;
 }
 .container{
     margin: 40px 0;
@@ -33,12 +34,11 @@ img{
     border-radius: 10px;
 }
 .submit:hover{
-    background-color: #3794eb;
+    background-color: #1362ac;
     cursor: pointer;
 }
 .container-fixed{
-    position: fixed;
-    right: 0;
+   
     padding-right: 6vw;
 }
 .toSignInButton{
@@ -52,4 +52,3 @@ img{
     background-color: #3794eb;
     cursor: pointer;
 }
-.form{padding: 20vh 0;}
